(Track Panel) Fix Horizontal Scrolling - Z Index

--- a/components/Panel/style.css
+++ b/components/Panel/style.css
@@ -1,6 +1,6 @@
 .panel_scrollbar::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+  width: 2px;
+  height: 2px;
   border-radius: 6px;
 }
 
